Fixed image links alignment; Sidebar refactoring

--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -904,6 +904,9 @@ img {
       @include img;
       @include img-caption;
     }
+    > img[data-src]:not(.normal):not(.left):not(.right) {
+      @include align-center;
+    }
   }
 
   > p {
